Update changes log and slight fix for participants on Firefox to only show a scroll bar when actually needed.

--- a/less/essential/navigation.less
+++ b/less/essential/navigation.less
@@ -293,7 +293,7 @@ div.dropdown-menu > ul {
 
 #custom_menu_participants .participants {
     max-height: 108px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #page-mod-forum-view .notification.unread {
